# kfs-tg

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  build.rs  config.go  go.mod  go.sum  keys.go  main.go  model.go  telegram.go  types.go  update.go  view.go
.cargo/: config.toml.example
.github/workflows/: ai-audit.yml  ci.yml  release.yml
_rust/.cargo/: config.toml
_rust/src/: app.rs  keys.rs
_rust/src/tg/: mod.rs  types.rs
src/: app.rs  config.rs  keys.rs  main.rs
src/tg/: mod.rs  types.rs
src/ui/: chat_list.rs  login.rs  messages.rs  mod.rs
