[package]
name = "kfs-tg"
version = "0.1.0"
edition = "2024"
description = "Minimalist TUI Telegram client"
license = "MIT"
repository = "https://github.com/k0fis/kfs-tg"

[dependencies]
rust-tdlib = { version = "0.4", features = ["client", "tokio"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
